# mysite3

./: db.sqlite3  pyproject.toml
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_comment.py  0003_comment_name.py  0004_post_tags.py
blog/templates/blog/: base.html
blog/templates/blog/post/: detail.html  list.html  share.html
mysite/: settings.py
mysite.egg-info/: PKG-INFO
