[tool.poetry]
name = "mysite"
version = "0.1.0"
description = ""
authors = ["Xens Chan <xentisize@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.6"
django_taggit = "^1.3.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pylint = "^2.5.2"
pylint-django = "^2.0.15"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
